--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
-db:
-    image: mariadb:latest
+services:
+  db:
+    image: bradforfacr.azurecr.io/mariadb:latest
 
     volumes:
       - db_data:/var/lib/mysql
@@ -13,7 +14,7 @@ db:
   wordpress:
     depends_on:
       - db
-    image: wordpress:latest
+    image: bradforfacr.azurecr.io/wordpress:latest
     volumes:
       - wordpress_data:/var/www/html
     ports:
